# docflow

./: .env  alembic.ini  main.py  pyproject.toml
src/adapters/http/: client.py  user_client.py
src/common/actions/: base.py
src/common/db/: mixins.py  utils.py
src/common/enum/: __init__.py  base.py  user_roles.py
src/common/pagination/: __init__.py  schema.py  utils.py
src/common/utils/: __init__.py  user_utils.py  uuid_utils.py
src/core/: auth.py  db.py  events.py  settings.py
src/draft/V3/documents/: _mixins.py  enums.py  models.py  routers.py
src/draft/V3/workflow/: models.py  utils.py
src/middlewares/: auth_header_context.py
src/migrations/: env.py
src/migrations/versions/: 0cd143da3594_document_files.py  0ef80fa818aa_correspondence_documentaddress.py  6d84b0ec9f4a_document_status.py  7b4cbe6769dc_correspondence_documentconfidential_enum.py  8c195b320101_correspondence_documentregistration.py  e021e288880a_document_init.py  f2dcd0391212_document_creator_id.py  f95689c3128f_document_sytem_numbers.py
src/modules/correspondence/actions/: system_registration_document.py
src/modules/correspondence/api/: router.py
src/modules/documents/: models.py  routers.py  utils.py
src/modules/documents/schemas/: base.py  document_address.py  document_create.py  document_list_item.py  document_recipient.py
src/modules/documents/services/: document_access_service.py  document_confidentiality_level_service.py  document_create.py  orchestration_service.py
src/modules/registration/: models.py
src/modules/workflow/: enums.py  models.py  utils.py
(+38 files in other folders)
